# OS17_stuff

./: README.md
assignment1/: .gitignore  CMakeLists.txt
assignment1/include/: bitmap.h  block_store.h
assignment1/src/: bitmap.c  block_store.c
assignment1/test/: tests.cpp
c_refresher1/allocation/src/: allocation.c
c_refresher1/arrays/src/: arrays.c
c_refresher1/bits/src/: bitmap.c
c_refresher1/debug/src/: debug.c
c_refresher1/error_handling/src/: error_handling.c
c_refresher1/strings/src/: sstring.c
c_refresher1/structures/src/: structures.c
c_refresher1/system_programming/src/: sys_prog.c
project1/: CMakeLists.txt  readme.md
project1/include/: processing_scheduling.h
project1/src/: analysis.c  dyn_array.c  process_scheduling.c
project1/test/: tests.cpp
